# go-xslt

./: CMakeLists.txt  README.md  example_test.go  go.mod  xslt.go  xslt_test.go
lib/: xslt.h
src/: CMakeLists.txt  xslt.c
