
include_directories(${FLYWAVE_INCLUDE_DIRS})

FILE( GLOB cxslt_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.c )
FILE( GLOB cxslt_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h )

ADD_LIBRARY(cxslt STATIC
            ${cxslt_HEADER_FILES}
            ${cxslt_SOURCE_FILES}
          )

TARGET_INCLUDE_DIRECTORIES(cxslt PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>)

SOURCE_GROUP("src" FILES ${cxslt_SOURCE_FILES})
SOURCE_GROUP("include" FILES ${cxslt_HEADER_FILES})

SET_TARGET_PROPERTIES(cxslt
                    PROPERTIES PUBLIC_HEADER "${headers}")

SET_TARGET_PROPERTIES(cxslt PROPERTIES
ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR})
SET_TARGET_PROPERTIES(cxslt PROPERTIES 
LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR})
SET_TARGET_PROPERTIES(cxslt PROPERTIES
RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}
RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR})
